--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
 	"main": "src/index.js",
 	"license": "MIT",
 	"scripts": {
-		"start": "SET NODE_ENV=production & pm2 start ./src/index.js",
+		"start": "pm2 start ./src/index.js",
 		"dev": "nodemon ./src/index.js",
 		"lint": "eslint ./src/**/*.js",
 		"lint:fix": "yarn lint --fix",
-		"test": "nyc mocha ./src/test/**/*.js --timeout=10000 --exit "
+		"test": "nyc mocha ./src/tests/**/*.js --timeout=10000 --exit "
 	},
 	"husky": {
 		"hooks": {
@@ -42,6 +42,9 @@
 	"devDependencies": {
 		"eslint": "^6.8.0",
 		"eslint-config-airbnb-base": "^14.0.0",
-		"eslint-plugin-import": "^2.20.1"
+		"eslint-plugin-import": "^2.20.1",
+		"mocha": "^7.1.0",
+		"nyc": "^15.0.0",
+		"supertest": "^4.0.2"
 	}
 }
